feat: add /health-check, test&fix middlewares (#56)
